--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,7 +5,7 @@ author:
 homepage:
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.10.0 <3.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -17,6 +17,8 @@ dependencies:
   webview_flutter: ^1.0.7
   # 图片编辑
   image_editor: ^0.7.3   
+
+  cupertino_icons: ^1.0.0   
 
 dev_dependencies:
   flutter_test:
